--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -111,11 +111,17 @@ a,a:hover, a:focus{
     height: 30rem;
     padding-top: 30%;
     overflow-y: auto;
+    overflow-x: hidden;
 }
+
 .sidebar .nav-links::-webkit-scrollbar{
     width: 5px;
     border-radius: 50px;
+    background: #cccccc;
+}
+.sidebar .nav-links::-webkit-scrollbar-thumb{
     background: #00C782;
+    border-radius: 50px;
 }
 .sidebar .nav-links li{
 list-style: none;
@@ -228,6 +234,7 @@ transition: all .2s;
 
   }
   .navbar-brand{
+      margin-left: 30px;
       color: #fff;
 
   }
@@ -256,11 +263,24 @@ transition: all .2s;
       padding: 0px;
 
   }
-  .navbar-nav>li.active{
-      color: #fff;
-      border-radius: 4px;
-      background-color: rgba(0, 0, 0,0.08);
-  }
+.navbar-nav li{
+    list-style: none;
+
+}
+.navbar-nav .navbar-link{
+    margin-right: 30px;
+    
+}
+.navbar-nav li .navbar-link i{
+    font-size: 22px;
+    color: #fff;
+    margin: 10px auto;
+    position: relative;
+    left: 52rem;
+}
+
+
+
 
   /* card design */
   .card {
